@@ -22,8 +22,7 @@ import com.hemajoo.commerce.cherry.backend.persistence.document.converter.Docume
 import com.hemajoo.commerce.cherry.backend.persistence.document.entity.ServerDocumentEntity;
 import com.hemajoo.commerce.cherry.backend.persistence.document.randomizer.DocumentRandomizer;
 import com.hemajoo.commerce.cherry.backend.persistence.test.base.AbstractPostgresUnitTest;
-import com.hemajoo.commerce.cherry.backend.shared.base.entity.EntityException;
-import com.hemajoo.commerce.cherry.backend.shared.document.ClientDocumentEntity;
+import com.hemajoo.commerce.cherry.backend.shared.document.ClientDocument;
 import com.hemajoo.commerce.cherry.backend.shared.document.DocumentException;
 import org.javers.core.diff.Diff;
 import org.junit.jupiter.api.DisplayName;
@@ -36,7 +35,6 @@ import org.testcontainers.junit.jupiter.Testcontainers;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -93,7 +91,7 @@ class DocumentConverterUnitTest extends AbstractPostgresUnitTest
 
     @Test
     @DisplayName("Convert an identity to a server document")
-    final void testConvertIdentityToServerDocument() throws DocumentException, EntityException
+    final void testConvertIdentityToServerDocument() throws DocumentException
     {
         // For an entity identity to be mapped to a server entity, the server entity must exist in the underlying database!
         ServerDocumentEntity reference = servicePerson.getDocumentService().save(DocumentRandomizer.generateServerEntity(true));
@@ -122,7 +120,7 @@ class DocumentConverterUnitTest extends AbstractPostgresUnitTest
         EntityIdentity identity = new EntityIdentity(UUID.randomUUID(), EntityType.DOCUMENT);
 
         assertThatThrownBy(() -> converterDocument.fromIdentityToServer(identity))
-                .isInstanceOf(EntityException.class);
+                .isInstanceOf(DocumentException.class);
     }
 
     @Test
@@ -132,7 +130,7 @@ class DocumentConverterUnitTest extends AbstractPostgresUnitTest
         // For an entity identity to be mapped to a server entity, the server entity must exist in the underlying database!
         ServerDocumentEntity owner = servicePerson.getDocumentService().save(DocumentRandomizer.generateServerEntity(false));
 
-        ClientDocumentEntity client = DocumentRandomizer.generateClientEntity(true);
+        ClientDocument client = DocumentRandomizer.generateClientEntity(true);
         client.setOwner(owner.getIdentity());
 
         ServerDocumentEntity server = converterDocument.fromClientToServer(client);
@@ -151,12 +149,12 @@ class DocumentConverterUnitTest extends AbstractPostgresUnitTest
     @SuppressWarnings("java:S5977")
     final void testConvertClientToServerDocumentWithNonExistingOwner() throws DocumentException
     {
-        ClientDocumentEntity client = DocumentRandomizer.generateClientEntity(true);
+        ClientDocument client = DocumentRandomizer.generateClientEntity(true);
         client.setOwner(new EntityIdentity(EntityType.PERSON,UUID.randomUUID()));
 
         // If the owner of the client document to convert does not exist, ensure an exception is raised!
         assertThatThrownBy(() -> converterDocument.fromClientToServer(client))
-                .isInstanceOf(EntityException.class);
+                .isInstanceOf(DocumentException.class);
     }
 
     @Test
@@ -169,9 +167,8 @@ class DocumentConverterUnitTest extends AbstractPostgresUnitTest
             documents.add(DocumentRandomizer.generateServerEntity(true));
         }
 
-        List<ClientDocumentEntity> clients = documents.stream()
-                .map(document -> converterDocument.fromServerToClient(document))
-                .collect(Collectors.toList());
+        List<ClientDocument> clients = documents.stream()
+                .map(document -> converterDocument.fromServerToClient(document)).toList();
 
         assertThat(clients.size())
                 .as("Document server and client list should have the same size!")
@@ -186,15 +183,19 @@ class DocumentConverterUnitTest extends AbstractPostgresUnitTest
     @DisplayName("Convert a list of client documents to a list of server documents")
     final void testConvertClientToServerDocumentList() throws DocumentException
     {
-        List<ClientDocumentEntity> clients = new ArrayList<>();
+        List<ClientDocument> clients = new ArrayList<>();
         for (int i = 0; i < LIST_COUNT; i++)
         {
             clients.add(DocumentRandomizer.generateClientEntity(true));
         }
 
-        List<ServerDocumentEntity> servers = clients.stream()
-                .map(document -> converterDocument.fromClientToServer(document))
-                .collect(Collectors.toList());
+        List<ServerDocumentEntity> servers = new ArrayList<>();
+        ServerDocumentEntity serverDocumentEntity;
+        for (ClientDocument client : clients)
+        {
+            serverDocumentEntity = converterDocument.fromClientToServer(client);
+            servers.add(serverDocumentEntity);
+        }
 
         assertThat(servers.size())
                 .as("Both lists should have the same size!")
@@ -216,8 +217,7 @@ class DocumentConverterUnitTest extends AbstractPostgresUnitTest
         }
 
         List<EntityIdentity> identities = documents.stream()
-                .map(document -> converterDocument.fromServerToIdentity(document))
-                .collect(Collectors.toList());
+                .map(document -> converterDocument.fromServerToIdentity(document)).toList();
 
         assertThat(identities.size())
                 .as("Both lists should have the same size!")
@@ -249,8 +249,8 @@ class DocumentConverterUnitTest extends AbstractPostgresUnitTest
     @DisplayName("Copy a server document")
     final void testCopyClientDocument() throws DocumentException
     {
-        ClientDocumentEntity document = DocumentRandomizer.generateClientEntity(true);
-        ClientDocumentEntity copy = DocumentConverter.copy(document);
+        ClientDocument document = DocumentRandomizer.generateClientEntity(true);
+        ClientDocument copy = DocumentConverter.copy(document);
 
         assertThat(document)
                 .as("Both client documents should be equal!")
